--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "discord.js": "^14.16.2",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "mongoose": "^8.7.0",
         "node-fetch": "2.7"
     },
     "devDependencies": {
